# ARC-IIMR

./: .env.example  .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: scraper.yml
pages/: 1_Dashboard.py  2_Explore_Data.py  3_AI_Search.py  4_Add_or_Edit_Data.py  5_Admin_Tools.py  6_SQL_Runner.py
scripts/: collect_cookies.py  run_scraper.py
src/: __init__.py  config.py
src/chatbot/: __init__.py  nlp_chatbot.py
src/database/: __init__.py  models.py  repository.py
src/frontend/: __init__.py  app.py
src/scraper/: __init__.py  linkedin_scraper.py
src/storage/: __init__.py  b2_storage.py
src/utils/: __init__.py  helpers.py
tests/: __init__.py  test_chatbot.py  test_config.py  test_database.py  test_helpers.py
utils/: ai_utils.py  db.py  helpers.py
